# zugzwang

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
site/: index.html
src/: board.rs  eval.rs  history.rs  killers.rs  lib.rs  main.rs  movegen.rs  moves.rs  ordering.rs  play.rs  pst.rs  search.rs  square.rs  tt.rs  types.rs  uci.rs  zobrist.rs
tests/: cli.rs
